@@ -52,6 +52,7 @@ endif::[]
 - Set config `false` values to `false`, not `nil` {pull}761[#761]
 - Ensure that the previously running agent's config is used in `ElasticAPM.restart` {pull}763[#763]
 - Handle the Resque spy's payload class value being a String or Class and update docs {pull}768[#768]
+- Add finalizer on ProxyPipe::Write so Zlib::GzipWriter is properly closed {pull}787[#787]
 
 [float]
 ===== Added
